# nixbom

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
protos/: bom-1.3.proto  rustproto.proto
src/: main.rs  mod.rs  nix.rs  sbom.rs  spdx_spec.rs
src/protos/: bom_1_3.rs  mod.rs
