[package]
name = "spdnix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
clap = "2.33.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
chrono = "0.4"
protobuf = { version = "2", features = ["with-bytes", "with-serde", "serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }


[build-dependencies]
protoc-rust = "2.0"